3.9.0.0/TRANSLATION_STATUS.zh-TW.md
# 翻譯狀態 (3.9.0.0)

> 🌐 [English](TRANSLATION_STATUS.md) | **繁體中文**

原地重算：本版現有譯文皆予保留，仍標記為 `untranslated` 的字串維持原狀（補譯前先顯示英文）。

- 字串總數（兩專案合計）: 492
- 產生時間: 2026-07-21 23:37:18 +08:00

快速跳轉: [es-ES](#es-es) · [ru-RU](#ru-ru) · [tr-TR](#tr-tr)

## 整體（兩專案合計）

| 語言 | 已翻譯 | 待翻譯 | 完成度 |
|----------|-----------:|--------:|---------:|
| es-ES | 444 | 48 | 90% |
| ru-RU | 492 | 0 | 100% |
| tr-TR | 465 | 27 | 94% |

## 專案: OmniConsole

字串數: 470

| 語言 | 已翻譯 | 待翻譯 | 完成度 |
|----------|-----------:|--------:|---------:|
| es-ES | 428 | 42 | 91% |
| ru-RU | 470 | 0 | 100% |
| tr-TR | 444 | 26 | 94% |

## 專案: OmniConsole.PhantomLink

字串數: 22

| 語言 | 已翻譯 | 待翻譯 | 完成度 |
|----------|-----------:|--------:|---------:|
| es-ES | 16 | 6 | 72% |
| ru-RU | 22 | 0 | 100% |
| tr-TR | 21 | 1 | 95% |

## 待翻譯的 key

### es-ES

**OmniConsole**

新增 (20):
- `CommunityPlatformsButton.Content`
- `CommunityPlatforms_Title`
- `CommunityPlatforms_Loading`
- `CommunityPlatforms_Error`
- `CommunityPlatforms_Empty`
- `CommunityPlatforms_SchemaTooNew`
- `CommunityPlatforms_SearchPlaceholder`
- `CommunityPlatforms_SortNewest`
- `CommunityPlatforms_SortOldest`
- `CommunityPlatforms_SelectHint`
- `CommunityPlatforms_NoResults`
- `CommunityPlatforms_Submitter`
- `CommunityPlatforms_SubmitterDate`
- `CommunityPlatforms_NotDetected`
- `CommunityPlatforms_Action_Add`
- `CommunityPlatforms_Result_Added`
- `Import_Error_PackageNotInstalled`
- `CommunityPlatforms_CheckingUpdates`
- `CommunityPlatforms_OfflineNotice`
- `Import_Error_ExecutableNotFound`

變動（需重譯） (22):
- `AdvancedSection_Steam.Text`
- `AdvancedSection_Nekomata.Text`
- `PhantomKeySetting_Title.Text`
- `PhantomKeySetting_Description.Text`
- `GamepadMappingModeSetting_Title.Text`
- `GamepadMappingModeSetting_Description.Text`
- `GamepadMappingModeSetting_Note.Text`
- `GamepadMappingModeSetting_BuiltInMappingNote.Text`
- `ControllerLayoutPresetSetting_Title.Text`
- `ControllerLayoutPresetSetting_Description.Text`
- `ControllerLayoutPresetItem_OmniNav`
- `ControllerLayoutPresetItem_Classic`
- `GamepadProfile_BlockNativeGamepadInput_Note.Text`
- `GamepadProfile_MappingServicePriority_Title.Text`
- `GamepadProfile_MappingServicePriority_Description.Text`
- `GamepadProcessPriority_Standard`
- `GamepadProcessPriority_Performance`
- `GamepadRepeatToggle.Content`
- `GamepadMappingClearAllConfirmBody`
- `GamepadMappingEmptyConfirmBody`
- `GamepadMappingEmptyRemoveBody`
- `ManageLanguages_OfflineNotice`

**OmniConsole.PhantomLink**

變動（需重譯） (6):
- `Widget_GamepadMappingMode_Title.Text`
- `Widget_Mode_On.Content`
- `Widget_ControllerLayoutPreset_Title.Text`
- `Widget_ControllerLayoutPreset_OmniNav.Content`
- `Widget_ControllerLayoutPreset_Classic.Content`
- `Widget_BuiltInMappingNote.Text`

### ru-RU

_全部已翻譯。_

### tr-TR

**OmniConsole**

新增 (20):
- `CommunityPlatformsButton.Content`
- `CommunityPlatforms_Title`
- `CommunityPlatforms_Loading`
- `CommunityPlatforms_Error`
- `CommunityPlatforms_Empty`
- `CommunityPlatforms_SchemaTooNew`
- `CommunityPlatforms_SearchPlaceholder`
- `CommunityPlatforms_SortNewest`
- `CommunityPlatforms_SortOldest`
- `CommunityPlatforms_SelectHint`
- `CommunityPlatforms_NoResults`
- `CommunityPlatforms_Submitter`
- `CommunityPlatforms_SubmitterDate`
- `CommunityPlatforms_NotDetected`
- `CommunityPlatforms_Action_Add`
- `CommunityPlatforms_Result_Added`
- `Import_Error_PackageNotInstalled`
- `CommunityPlatforms_CheckingUpdates`
- `CommunityPlatforms_OfflineNotice`
- `Import_Error_ExecutableNotFound`

變動（需重譯） (6):
- `GamepadMappingModeSetting_Note.Text`
- `GamepadMappingModeSetting_BuiltInMappingNote.Text`
- `GamepadMappingClearAllConfirmBody`
- `GamepadMappingEmptyConfirmBody`
- `GamepadMappingEmptyRemoveBody`
- `ManageLanguages_OfflineNotice`

**OmniConsole.PhantomLink**

變動（需重譯） (1):
- `Widget_BuiltInMappingNote.Text`
